:new: Agregar notas

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <!-- font awesone(iconos) -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+        <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+        
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
         <script>
             (function (i, s, o, g, r, a, m) {
@@ -41,7 +44,7 @@
         
     </head>
     <body>
-        <div class="logo">LOGO</div>
+        <div class="logo">Aqui va el Logo</div>
         <nav class="navbar navbar-default menu">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
