--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
+
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -55,7 +57,11 @@
                 <div class="intro">
                     <p>Inicia sesion y disfruta de todo lo que tenemos para ti.</p>
                     <p><a href="login.php" class="btn-intro">Entrar</a></p>
-                    <div class="bajar"><p>Baja para más contenido</p></div>
+                    <div class="bajar">
+                        <p>Baja para más contenido</p>
+                        <img src="img/Flecha-17.gif" alt="bajar">
+                        <p></p>
+                    </div>
                 </div></div>
             <nav class="navbar navbar-default menu inicio">
                 <div class="container">
